# stm32f3disco-led-roulette

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  openocd.gdb  openocd.sh
.cargo/: config.toml
.run/: Cargo Debug.run.xml  Cargo Release.run.xml
auxiliary/: Cargo.toml
auxiliary/src/: compass.rs  leds.rs  lib.rs
auxiliary/src/button/: interrupt.rs  mod.rs
bins/led_roulette/: Cargo.toml  README.md
bins/led_roulette/src/: compass.rs  main.rs
crates/led_roulette_aux/: Cargo.toml
crates/led_roulette_aux/src/: lib.rs
crates/stm32f3_discovery/: Cargo.toml  README.md
crates/stm32f3_discovery/src/: compass.rs  leds.rs  lib.rs
crates/stm32f3_discovery/src/button/: mod.rs
docs/: CLION.md  SETUP.md
docs/tikz/: gyroscope.tex  magnetometer.tex  orientation.tex  render.sh
src/: byot.rs  compass.rs  gyro.rs  l3gd20.rs  leds.rs  main.rs  sensor_out_buffer.rs  utils.rs
svd/: STM32F303.svd
