[package]
name = "stm32f3disco-led-roulette"
version = "0.1.0"
description = "Experiments with Rust on an STM32F3-Discovery board"
authors = ["Markus Mayer"]
repository = "https://github.com/sunsided/stm32f3disco-led-roulette"
license = "EUPL-1.2"
publish = false
edition = "2021"

[features]
slowpoke = []

[dependencies]
accelerometer = "0.12.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
lsm303dlhc-ng = { version = "0.3.4", features = ["defmt", "accelerometer"] }
lsm303dlhc-registers = { version = "0.1.3", features = ["defmt"] }
micromath = "2.1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
serial-sensors-proto = "0.2.3"
stm32-usbd = "0.7.0"
# See https://github.com/stm32-rs/stm32f3xx-hal/pull/366
stm32f3xx-hal = { git = "https://github.com/sunsided/stm32f3xx-hal", branch = "feature/stm32-usbd-0.7.0", version = "0.10.0", features = ["stm32f303xc", "usb", "defmt"] }
switch-hal = "0.4.0"
usb-device = { version = "0.3.2", features = ["defmt"] }
usbd-serial = "0.2.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
