[package]
name = "stm32f3disco-led-roulette"
version = "0.1.0"
description = "Experiments with Rust on an STM32F3-Discovery board"
authors = ["Markus Mayer"]
repository = "https://github.com/sunsided/stm32f3disco-led-roulette"
publish = false
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-semihosting = "0.6.0"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc"] }
