[package]
name = "stm32f3disco-led-roulette"
version = "0.1.0"
description = "Experiments with Rust on an STM32F3-Discovery board"
authors = ["Markus Mayer"]
repository = "https://github.com/sunsided/stm32f3disco-led-roulette"
license = "EUPL-1.2"
publish = false
edition = "2021"

[dependencies]
accelerometer = "0.12.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
lsm303dlhc = { git = "https://github.com/sunsided/lsm303dlhc", branch = "main", features = ["defmt", "accelerometer"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc", "usb", "defmt"] }
switch-hal = "0.4.0"
usb-device = { version = "0.3.2", features = ["defmt"] }
usbd-serial = "0.2.2"
