[package]
authors = [
"Jorge Aparicio <jorge@japaric.io>",
"Christopher J. McClellan <chris.mcclellan203@gmail.com>",
"Wink Saville <wink@saville.com",
]
name = "led-roulette-aux"
version = "0.2.0"
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["discovery", "stm32f3", "bsp", "arm"]
publish = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [] # build only default target for docs

[dependencies]
stm32f3-discovery = { path = "../stm32f3_discovery" }

# [profile.release]
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
